Update project.json for dotnet 1.0

--- a/tools/Copy.Librdkafka/project.json
+++ b/tools/Copy.Librdkafka/project.json
@@ -12,10 +12,10 @@
   },
 
   "frameworks": {
-    "netstandard1.5": {
+    "netcoreapp10": {
       "dependencies": {
           "Microsoft.NETCore.App": {
-              "version": "1.0.0-rc2-*"
+              "version": "1.0.0"
           }
       },
       "imports": [
