--- a/tools/Copy.Librdkafka/project.json
+++ b/tools/Copy.Librdkafka/project.json
@@ -7,7 +7,7 @@
   },
 
   "dependencies": {
-    "Microsoft.Extensions.PlatformAbstractions": "1.0.0-*",
+    "Microsoft.Extensions.PlatformAbstractions": "1.0.0",
     "Newtonsoft.Json": "8.0.3"
   },
 
